# efm

./: LICENSE  README.md  pyproject.toml
efm/: __init__.py  aggregators.py  estimator.py  explain.py  models.py  primitives.py  trainer.py  utils.py
examples/: synthetic.ipynb
tests/: test_efm.py
