[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efm"
version = "0.1.0"
description = "Differentiable fuzzy rule ensembles for tabular tasks"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
  { name="Islam Tlupov", email="tlupovislam@gmail.com" },
]
requires-python = ">=3.9"

keywords = [
    "fuzzy-logic",
    "rule-learning",
    "interpretable-ml",
    "explainable-ai",
    "tabular-data",
    "pytorch",
    "scikit-learn",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pandas>=1.5",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "build>=1.0",
    "twine>=4.0",
]

examples = [
    "jupyter>=1.0",
    "seaborn>=0.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["efm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::UserWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false

[tool.coverage.run]
source = ["efm"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
